# cookiecutter-modern-pypackage

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.rst  Makefile  README.md  SECURITY.md  cookiecutter.json  mypy.ini  noxfile.py  pyproject.toml  tasks.py
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: codeql-analysis.yml  pre-commit-autoupdate.yml  release.yml  tests.yml
docs/: conf.py  console_script_setup.rst  index.rst  invoke.rst  prompts.rst  requirements.txt  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_name}}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.rst  Makefile  Pipfile  README.md  SECURITY.md  codecov.yml  noxfile.py  pyproject.toml  tasks.py
{{cookiecutter.project_name}}/.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
{{cookiecutter.project_name}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.project_name}}/.github/workflows/: codeql-analysis.yml  pre-commit-autoupdate.yml  release.yml  tests.yml
{{cookiecutter.project_name}}/docs/: conf.py  index.rst  installation.rst  requirements.txt
{{cookiecutter.project_name}}/pipenv_files/: Makefile  Pipfile
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_name}}/tests/: test_cli.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_name}}/tools/: install.sh  install_hooks.sh
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml  tasks.py
{{cookiecutter.project_slug}}/.github/workflows/: release.yml  tests.yml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  installation.rst  requirements.txt
{{cookiecutter.project_slug}}/tests/: test_cli.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
