[tool.poetry]
name = "cookiecutter-modern-pypackage"
version = "2.2.0"
description = "Cookiecutter template for a modern Python package."
authors = ["Federico Jaureguialzo <fedejaure@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fedejaure/cookiecutter-modern-pypackage"
repository = "https://github.com/fedejaure/cookiecutter-modern-pypackage"
documentation = "https://cookiecutter-modern-pypackage.readthedocs.io"
keywords=["cookiecutter", "template", "package"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fedejaure/cookiecutter-modern-pypackage/issues"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
invoke = "^2.0.0"
flake8 = ">=4.0.1,<5.0.0"
flakeheaven = "^3.3.0"
flake8-builtins = "^2.1.0"
flake8-blind-except = "^0.2.1"
flake8-logging-format = "^0.9.0"
flake8-bugbear = "^23.2.13"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.7.0"
flake8-bandit = "^3.0.0"
flake8-broken-line = "^0.6.0"
darglint = "^1.8.1"
isort = "^5.12.0"
black = "^23.1.0"
safety = "^2.4.0b1"
mypy = "^1.0.1"
sphinx = "^6.1.3"
recommonmark = "^0.7.1"
bump2version = "^1.0.1"
pytest = "^7.3.1"
xdoctest = "^1.1.1"
cookiecutter = "^2.1.1"
pytest-cookies = "^0.6.1"
watchdog = {version = "^2.3.1", extras = ["watchmedo"]}

[tool.flakeheaven]
format = "grouped"
max_line_length = 99
show_source = true
docstring-convention = "google"
extended_default_ignore = []

[tool.flakeheaven.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
mccabe = ["+*"]
flake8-annotations = ["+*", "-ANN1??", "-ANN401"]
flake8-docstrings = ["+*", "-D212"]
"flake8-*" = ["+*"]
pylint = ["-C????", "-E????", "+F????", "+I????", "-R????", "-W????"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["cookiecutter", "invoke", "nox", "nox_poetry", "pytest", "pytest_cookies"]
skip = "{{ cookiecutter.project_name }}"

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["cookiecutter.*", "pytest.*", "pytest_cookies.*", "invoke.*", "nox.*", "nox_poetry.*"]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
