[tool.poetry]
name = "cookiecutter-modern-pypackage"
version = "3.0.1"
description = "Cookiecutter template for a modern Python package."
authors = ["Federico Jaureguialzo <fedejaure@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fedejaure/cookiecutter-modern-pypackage"
repository = "https://github.com/fedejaure/cookiecutter-modern-pypackage"
documentation = "https://cookiecutter-modern-pypackage.readthedocs.io"
keywords=["cookiecutter", "template", "package"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/fedejaure/cookiecutter-modern-pypackage/issues"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
cookiecutter = "^2.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
invoke = "^2.2.0"
bump2version = "^1.0.1"
watchdog = {version = "^4.0.0", extras = ["watchmedo"]}

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
xdoctest = "^1.1.3"
pytest-cookies = "^0.7.0"

[tool.poetry.group.linters.dependencies]
isort = "^5.13.2"
black = "^24.2.0"
ruff = "^0.2.1"

[tool.poetry.group.security.dependencies]
safety = "^3.0.1"

[tool.poetry.group.typing.dependencies]
mypy = "^1.8.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
recommonmark = "^0.7.1"

[tool.ruff]
target-version = "py39"
output-format = "full"
line-length = 99
fix = true
extend-exclude = [
    "docs/*",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",  # flake8
  "C",  # mccabe
  "I",  # isort
  "N",  # pep8-naming
  "D",  # flake8-docstrings
  "ANN",  # flake8-annotations
  "S",  # flake8-bandit
  "BLE",  # flake8-blind-except
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "G",  # flake8-logging-format
  "ERA",  # eradicate
  "ISC",  # flake8-implicit-str-concat
  "RUF",  # Ruff-specific rules
]
ignore = ["ANN101"]
unfixable = [
  "ERA",  # Don't remove commented-out code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["cookiecutter", "invoke", "nox", "nox_poetry", "pytest", "pytest_cookies"]
skip = "{{ cookiecutter.project_name }}"

[tool.black]
line-length = 99
target-version = ["py39"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["cookiecutter.*", "pytest.*", "pytest_cookies.*", "invoke.*", "nox.*", "nox_poetry.*"]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
