{% set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD': 'License :: OSI Approved :: BSD License',
    'ISC': 'License :: OSI Approved :: ISC License (ISCL)',
    'Apache Software License 2.0': 'License :: OSI Approved :: Apache Software License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
{% if cookiecutter.open_source_license == "Not open source" %}
license = "{{ cookiecutter.open_source_license }}"
{% endif %}
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
documentation = "https://{{ cookiecutter.project_name }}.readthedocs.io"
keywords = ["{{ cookiecutter.project_name }}"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    {% if cookiecutter.open_source_license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.open_source_license] }}",
    {% endif %}
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
{% if cookiecutter.project_name.lower().replace('-', '_') != cookiecutter.project_slug %}
packages = [
    { include = "{{ cookiecutter.project_slug }}", from = "src" },
]
{% endif %}

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}/issues"


{% if cookiecutter.command_line_interface|lower == 'click' %}
[tool.poetry.scripts]
{{ cookiecutter.project_name }} = '{{ cookiecutter.project_slug }}.cli:main'
{% endif %}

[tool.poetry.dependencies]
python = "<3.11,>=3.8"
{% if cookiecutter.command_line_interface|lower == 'click' %}
click = "^8.0.3"
{% endif %}

[tool.poetry.dev-dependencies]
pre-commit = "^3.1.1"
invoke = "^1.7.3"
flake8 = "^3.9.2"
flakehell = "^0.9.0"
flake8-builtins = "^1.5.3"
flake8-blind-except = "^0.2.1"
flake8-logging-format = "^0.8.1"
flake8-bugbear = "^22.9.23"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
flake8-bandit = "^3.0.0"
flake8-broken-line = "^0.6.0"
darglint = "^1.8.1"
isort = "^5.12.0"
black = "^22.10.0"
safety = "^2.3.1"
mypy = "^1.0.1"
sphinx = "^6.1.3"
recommonmark = "^0.7.1"
bump2version = "^1.0.1"
pytest = "^7.1.3"
xdoctest = "^1.1.0"
coverage = {version = "^6.5.0", extras = ["toml"]}
pytest-cov = "^3.0.0"
watchdog = {version = "^2.1.7", extras = ["watchmedo"]}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.project_slug }}"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.flakehell]
format = "grouped"
max_line_length = 99
show_source = true
docstring-convention = "google"
extended_default_ignore = []

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
mccabe = ["+*"]
flake8-annotations = ["+*", "-ANN401"]
"flake8-*" = ["+*"]
darglint = ["+*"]

[tool.flakehell.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke", "nox", "nox_poetry"]

[tool.black]
line-length = 99
target-version = ["py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
